tg-319 add columna estado en tabla de diagnosticos

--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -113,7 +113,8 @@
 				"table": {
 					"TITLE": "Diagnósticos registrados",
 					"columns": {
-						"DIAGNOSIS": "Diagnóstico"
+						"DIAGNOSIS": "Diagnóstico",
+						"STATUS": "Estado"
 					}
 				}
 			},
