tg-303 [BE] Fix Validaciones Generales - Internacion

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -50,4 +50,5 @@ snomed.id.max.value=Sctid must be 20 characters long
 snomed.pt.max.value=Preferred term must be 100 characters long
 
 document.invalid=Invalid document
+document.update.invalid=Document update is not possible
 value.mandatory=Valor mandatory
