--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -53,5 +53,6 @@ snomed.id.max.value=Sctid debe contener hasta 20 caracteres
 snomed.pt.max.value=Los tèrminos preferidos deben contener hasta 100 caracteres
 
 document.invalid=Documento desconocido
+document.update.invalid=La actualización del documento no es posible
 
 value.mandatory=Valor obligatorio
