--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -32,6 +32,7 @@ role.mandatory=Id rol obligatorio
 role.invalid=Id rol invalido
 role.min.value=Id rol tiene que ser mayor a 1
 invalid.user=Usuario invalido
+role-level.institution.required=El rol requiere una institución
 ########################
 
 
