tg-308 [FE] Tabla Home page, boton Ver direcciona a ficha de internacion de paciente

--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -253,7 +253,7 @@
 		},
 		"home": {
 			"TITLE": "Pacientes",
-			"TITLE_SEARCH": "Búsqueda de pacientes",
+			"TITLE_SEARCH": "Búsqueda de pacientes internados",
 			"find_add_section": {
 				"BUTTON_ADD": "Crear paciente temporal",
 				"BUTTON_SEARCH": "Buscar",
