--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -188,6 +188,7 @@
 		"internacion-paciente": {
 			"TITLE": "HCE Internación",
 			"actions": {
+				"ADD_EPICRISIS": "Generar epicrisis",
 				"ADD_EVAL_INGRESO": "Generar evaluación de ingreso"
 			},
 			"card": {
