--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -189,7 +189,8 @@
 			"TITLE": "HCE Internación",
 			"actions": {
 				"ADD_EPICRISIS": "Generar epicrisis",
-				"ADD_EVAL_INGRESO": "Generar evaluación de ingreso"
+				"ADD_EVAL_INGRESO": "Generar evaluación de ingreso",
+				"ADD_NOTA_EVOLUCION": "Agregar nota de evolución"
 			},
 			"card": {
 				"DAYS_INTERNED": "{{days}} días internado",
