tg-366 saca checkbox adjuntar firma digital de documentos de internación

--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -102,7 +102,7 @@
 			"buttons": {
 				"ATTACH_SIGNATURE": "Adjuntar firma digital",
 				"SAVE_DRAFT": "Guardar borrador",
-				"SIGN_CONFIRM": "Firmar y confirmar"
+				"CONFIRM": "Confirmar"
 			},
 			"datos-antropometricos": {
 				"TITLE": "Datos antropométricos",
@@ -211,7 +211,7 @@
 			"buttons": {
 				"ATTACH_SIGNATURE": "Adjuntar firma digital",
 				"SAVE_DRAFT": "Guardar borrador",
-				"SIGN_CONFIRM": "Firmar y confirmar"
+				"CONFIRM": "Confirmar"
 			},
 			"diagnosticos": {
 				"TITLE": "Diagnósticos",
