tg-369 implementa snackbar para msg de error y exito al submittear forms

--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -155,6 +155,10 @@
 					}
 				}
 			},
+			"messages": {
+				"ERROR": "Error al guardar documento de evaluación de ingreso",
+				"SUCCESS": "El documento de evaluación de ingreso se guardó exitosamente"
+			},
 			"vital-signs": {
 				"form": {
 					"TITLE": "Signos vitales",
