tg-369 fix mensaje nota evolución

--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -274,8 +274,8 @@
 			"TITLE": "Nota de evolución",
 			"SUBTITLE": "Completa los siguientes datos.",
 			"messages": {
-				"ERROR": "Error al guardar documento de nota de evaluación",
-				"SUCCESS": "El documento de nota de evaluación se guardó exitosamente"
+				"ERROR": "Error al guardar documento de nota de evolución",
+				"SUCCESS": "El documento de nota de evolución se guardó exitosamente"
 			}
 		},
 		"internados-table": {
