--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -116,7 +116,8 @@
 				"WEIGHT": "Peso (kg)"
 			},
 			"diagnosticos": {
-				"TITLE": "Diagnósticos",
+				"TITLE_PRINCIPAL": "Diagnóstico principal",
+				"TITLE": "Otros Diagnósticos",
 				"ADD": "Agregar diagnóstico",
 				"DIAGNOSIS": "Diagnóstico",
 				"PRESUMPTIVE": "Presuntivo",
