tg-407. [BE] Modificar validación de diagnostico principal

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -44,7 +44,11 @@ institution.invalid=Invalid institution
 
 ####### Internment Episode #######
 internmentepisode.invalid=Invalid internment
-diagnosis.mandatory=Diagnosis mandatory
+diagnosis.mandatory=Main diagnosis mandatory
+diagnosis.main.repeated=Repeated main diagnosis
+diagnosis.secondary.repeated.principal= Diagnosis defined as principal
+diagnosis.repeated=Repeated diagnosis
+health.history.condition.repeated=Repeated records
 
 snomed.invalid=Save SnomedCT code failed
 snomed.id.max.value=Sctid must be 20 characters long
