--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -47,7 +47,11 @@ institution.invalid=Institución desconocida
 
 ####### Internment Episode #######
 internmentepisode.invalid=Internación desconocida
-diagnosis.mandatory=Diagnóstico obligatorio
+diagnosis.mandatory=Diagnóstico principal obligatorio
+diagnosis.main.repeated= Diagnóstico principal repetido
+diagnosis.secondary.repeated.principal= Diagnósticos definidos como principal 
+diagnosis.repeated=Diagnósticos repetidos
+health.history.condition.repeated= Antecedentes repetidos
 
 snomed.invalid=Fallo al guardar código SnomedCT
 snomed.id.max.value=Sctid debe contener hasta 20 caracteres
