tg-409 agrego checkbox suspended para medicacion en anamnesis

--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -150,6 +150,7 @@
 				"MEDICATION": "Medicación",
 				"form": {
 					"CLINICAL_STATUS": "Estado clínico",
+					"SUSPENDED": "Suspendido",
 					"NOTE": "Notas"
 				},
 				"table": {
