tg-429 agrego diagnostico ppal y medicacion ambulatoria a epicrisis

--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -247,7 +247,7 @@
 				}
 			},
 			"medicacion": {
-				"TITLE": "Medicación habitual",
+				"TITLE": "Medicación ambulatoria",
 				"table": {
 					"TITLE": "Medicaciones registradas",
 					"columns": {
