--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -57,4 +57,5 @@ snomed.pt.max.value=Preferred term must be 100 characters long
 
 document.invalid=Invalid document
 document.update.invalid=Document update is not possible
+document.create.invalid=Internment already registered a similar document
 value.mandatory=Valor mandatory
