--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -60,5 +60,6 @@ snomed.pt.max.value=Los tèrminos preferidos deben contener hasta 100 caracteres
 
 document.invalid=Documento desconocido
 document.update.invalid=La actualización del documento no es posible
+document.create.invalid=La internación ya registra un documento semejante
 
 value.mandatory=Valor obligatorio
