tg-441. [BE] Validar anamensis ya creada

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -49,6 +49,7 @@ diagnosis.main.repeated=Repeated main diagnosis
 diagnosis.secondary.repeated.principal= Diagnosis defined as principal
 diagnosis.repeated=Repeated diagnosis
 health.history.condition.repeated=Repeated records
+anamnesis.exist=Internment has an anamnesis yet
 
 snomed.invalid=Save SnomedCT code failed
 snomed.id.max.value=Sctid must be 20 characters long
