--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -52,6 +52,7 @@ diagnosis.main.repeated= Diagnóstico principal repetido
 diagnosis.secondary.repeated.principal= Diagnósticos definidos como principal 
 diagnosis.repeated=Diagnósticos repetidos
 health.history.condition.repeated= Antecedentes repetidos
+anamnesis.exist=La internación ya contiene una anamnesis
 
 snomed.invalid=Fallo al guardar código SnomedCT
 snomed.id.max.value=Sctid debe contener hasta 20 caracteres
