tg-452 conecto con BE para persistir epicrisis con seleccion de datos

--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -232,7 +232,8 @@
 					"TITLE": "Diagnósticos registrados",
 					"columns": {
 						"DIAGNOSIS": "Diagnóstico",
-						"STATUS": "Estado"
+						"STATUS": "Estado",
+						"VERIFICATION": "Verificación"
 					}
 				}
 			},
