tg-429 acomoda style diagnostico princiapl en epicrisis

--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -227,6 +227,7 @@
 			},
 			"diagnosticos": {
 				"TITLE": "Diagnósticos",
+				"TITLE_PRINCIPAL": "Diagnóstico principal",
 				"DIAGNOSIS": "Diagnóstico",
 				"PRESUMPTIVE": "Presuntivo",
 				"table": {
