tg-467 Agrego acceso al listado de Instituciones

--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -1,6 +1,7 @@
 {
 	"app": {
 		"menu": {
+			"INSTITUCIONES": "Instituciones",
 			"INTERNACION": "HCE Internación",
 			"PACIENTES": "Pacientes",
 			"PERFIL": "Mi cuenta"
