tg-491 muestra día cuando es 1 y días cuando son varios en card internacion

--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -296,6 +296,7 @@
 			},
 			"card": {
 				"DAYS_INTERNED": "{{days}} días internado",
+				"ONE_DAY": "1 día internado",
 				"ADMISSION": "Ingreso: {{datetime}}"
 			},
 			"remove-diagnosis-dialog": {
