tg-401. [BE] Agregar validación de fecha

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -50,6 +50,7 @@ diagnosis.secondary.repeated.principal= Diagnosis defined as principal
 diagnosis.repeated=Repeated diagnosis
 health.history.condition.repeated=Repeated records
 anamnesis.exist=Internment has an anamnesis yet
+clinicalobservation.effetivetime.future=Measurement datetime have to be before or equals to the current datetime
 
 snomed.invalid=Save SnomedCT code failed
 snomed.id.max.value=Sctid must be 20 characters long
