--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -53,6 +53,7 @@ diagnosis.secondary.repeated.principal= Diagnósticos definidos como principal
 diagnosis.repeated=Diagnósticos repetidos
 health.history.condition.repeated= Antecedentes repetidos
 anamnesis.exist=La internación ya contiene una anamnesis
+clinicalobservation.effetivetime.future=La fecha de medición debe ser anterior o igual a la fecha y hora actual
 
 snomed.invalid=Fallo al guardar código SnomedCT
 snomed.id.max.value=Sctid debe contener hasta 20 caracteres
