tg-488 agrega modal para configurar fecha y hora del signo vital

--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -51,8 +51,9 @@
 	},
 	"buttons": {
 		"BACK": "Volver",
-		"CONTINUE": "Continuar",
 		"CANCEL": "Cancelar",
+		"CONTINUE": "Continuar",
+		"CONFIRM": "Confirmar",
 		"CLOSE": "Cerrar",
 		"SEARCH": "Buscar"
 	},
