tg-461 agregada annotation que valida el filtro recibido

--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -42,6 +42,9 @@ patient.invalid=Paciente desconocido
 ####### Person #######
 person.invalid=Persona desconocida
 
+####### Patient #######
+patient.filter.null=Filtro con campos vacios
+
 ####### Institution #######
 institution.invalid=Institución desconocida
 
