--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -35,6 +35,7 @@ role-level.institution.required=Role requires an institution
 
 ####### Patient #######
 patient.invalid=Invalid patient
+patient.filter.null=Empty fields on filter
 
 ####### Person #######
 person.invalid=Invalid person
