tg-527. [P2] Validar que las fechas de medición de signos vitales sea posterior a la fecha de inicio de internación

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -51,7 +51,11 @@ diagnosis.secondary.repeated.principal= Diagnosis defined as principal
 diagnosis.repeated=Repeated diagnosis
 health.history.condition.repeated=Repeated records
 anamnesis.exist=Internment has an anamnesis yet
+
+
+clinicalobservation.effetivetime.mandatory=Measurement datetime mandatory
 clinicalobservation.effetivetime.future=Measurement datetime have to be before or equals to the current datetime
+clinicalobservation.effetivetime.before.entrydate=Measurement datetime have to be after internment entry date
 
 snomed.invalid=Save SnomedCT code failed
 snomed.id.max.value=Sctid must be 20 characters long
@@ -61,3 +65,12 @@ document.invalid=Invalid document
 document.update.invalid=Document update is not possible
 document.create.invalid=Internment already registered a similar document
 value.mandatory=Valor mandatory
+
+
+####### Vital signs #######
+vitalsign.blood.oxygen.saturation =Blood oxygen saturation
+vitalsign.diastolic.blood.pressure=Diastolic blood pressure
+vitalsign.heart.rate=Heart rate
+vitalsign.respiratory.rate=Respiratory rate
+vitalsign.systolic.blood.pressure=Systolic blood pressure
+vitalsign.temperature=Temperature
