--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -56,7 +56,9 @@ diagnosis.secondary.repeated.principal= Diagnósticos definidos como principal
 diagnosis.repeated=Diagnósticos repetidos
 health.history.condition.repeated= Antecedentes repetidos
 anamnesis.exist=La internación ya contiene una anamnesis
+clinicalobservation.effetivetime.mandatory=Fecha de medición es obligatoria
 clinicalobservation.effetivetime.future=La fecha de medición debe ser anterior o igual a la fecha y hora actual
+clinicalobservation.effetivetime.before.entrydate=La fecha de medición debe ser posterior a la fecha de internación
 
 snomed.invalid=Fallo al guardar código SnomedCT
 snomed.id.max.value=Sctid debe contener hasta 20 caracteres
@@ -67,3 +69,11 @@ document.update.invalid=La actualización del documento no es posible
 document.create.invalid=La internación ya registra un documento semejante
 
 value.mandatory=Valor obligatorio
+
+
+vitalsign.blood.oxygen.saturation =saturación de oxigeno
+vitalsign.diastolic.blood.pressure=sensión diastólica
+vitalsign.heart.rate=frecuencia cardíaca
+vitalsign.respiratory.rate=frecuencia respiratoria
+vitalsign.systolic.blood.pressure=tensión sistólica
+vitalsign.temperature=temperatura corporal
