tg-522.[BE] Definir validación en el endpoint de creación de epicrisis para controlar la existencia de los otros documentos

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -66,6 +66,7 @@ document.update.invalid=Document update is not possible
 document.create.invalid=Internment already registered a similar document
 value.mandatory=Valor mandatory
 
+epicrisis.document.create.invalid=Anamnesis and evolution note required to create an epicrisis
 
 ####### Vital signs #######
 vitalsign.blood.oxygen.saturation =Blood oxygen saturation
