--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -70,6 +70,8 @@ document.create.invalid=La internación ya registra un documento semejante
 
 value.mandatory=Valor obligatorio
 
+epicrisis.document.create.invalid=Se necesita una anamnesis y nota de evolución para crear una epicrisis
+
 
 vitalsign.blood.oxygen.saturation =saturación de oxigeno
 vitalsign.diastolic.blood.pressure=sensión diastólica
