[tg-530] Backoffice: Agrega validación BE para estados validos de cama.

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -75,3 +75,7 @@ vitalsign.heart.rate=Heart rate
 vitalsign.respiratory.rate=Respiratory rate
 vitalsign.systolic.blood.pressure=Systolic blood pressure
 vitalsign.temperature=Temperature
+
+####### Bed #######
+beds.existsInternmentEpisode=The bed has an internment episode and can't be marked as free.
+########################
