tg-579 Usa traducciones para el titulo de la página

--- a/front-end/webapp/src/assets/i18n/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/es-AR.json
@@ -1,5 +1,6 @@
 {
 	"app": {
+		"TITLE": "Historia de salud integrada",
 		"menu": {
 			"INSTITUCIONES": "Instituciones",
 			"INTERNACION": "HCE Internación",
