tg-594. [Mejora] Cambiar el placeholder de la password

--- a/front-end/webapp/src/assets/i18n/auth/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/auth/es-AR.json
@@ -7,7 +7,7 @@
 				"USERNAME_PLACEHOLDER": "admin@example.com",
 				"USERNAME_REQUIRED": "Debe ingresar su usuario",
 				"PASSWORD_LABEL": "Clave",
-				"PASSWORD_PLACEHOLDER": "admin123",
+				"PASSWORD_PLACEHOLDER": "*****",
 				"PASSWORD_REQUIRED": "Debe ingresar su clave",
 				"SUBMIT": "INGRESAR"
 			}
