tg-622. [BE] Generar endpoint para almacenar evoluciones de diagnosticos.

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -51,7 +51,7 @@ diagnosis.secondary.repeated.principal= Diagnosis defined as principal
 diagnosis.repeated=Repeated diagnosis
 health.history.condition.repeated=Repeated records
 anamnesis.exist=Internment has an anamnesis yet
-
+epicrisis.exist=Internment has an epicrisis yet
 
 clinicalobservation.effetivetime.mandatory=Measurement datetime mandatory
 clinicalobservation.effetivetime.future=Measurement datetime have to be before or equals to the current datetime
