--- a/front-end/webapp/src/assets/i18n/auth/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/auth/es-AR.json
@@ -37,7 +37,8 @@
 				"ADMINISTRADOR": "Administrador",
 				"ESPECIALISTA_MEDICO": "Especialista Médico",
 				"PROFESIONAL_DE_SALUD": "Profesional de la salud",
-				"ADMINISTRATIVO": "Administrativo"
+				"ADMINISTRATIVO": "Administrativo",
+				"ENFERMERO_ADULTO_MAYOR": "Enfermero adulto mayor"
 			}
 		}
 	}
