tg-618 [FE] Agregar campos para informacion de doctores

--- a/front-end/webapp/src/assets/i18n/pacientes/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/pacientes/es-AR.json
@@ -18,8 +18,10 @@
 			"ETHNIC": "Etnia",
 			"FIRST_NAME": "Primer nombre",
 			"FIRST_NAMES_TITLE": "Nombres",
+			"FULL_NAME": "Nombre completo",
 			"GENDER": "Sexo",
 			"GENDER_SELF_DETERMINATION": "Género autopercibido",
+			"GENERAL_PRACTITIONER": "Médico de cabecera",
 			"IDENTIFICATION_TYPE": "Tipo de documento",
 			"IDENTIFICATION_NUMBER": "Nº de documento",
 			"INVALID": "El campo es invalido.",
@@ -33,6 +35,7 @@
 			"NAME_SELF_DETERMINATION": "Nombre autopercibido",
 			"ONLY_NUMBERS": "Solo números",
 			"OTHER_LAST_NAMES": "Otros apellidos",
+			"PAMI_DOCTOR": "Médico de PAMI",
 			"PHONE_NUMBER": "Teléfono",
 			"RELIGION": "Religion",
 			"REQUIRED": "El campo es requerido",
