--- a/front-end/webapp/src/assets/i18n/internacion/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/internacion/es-AR.json
@@ -117,7 +117,7 @@
 			"observations": {
 				"TITLE": "Evaluación clínica",
 				"CURRENT_DISEASE": "Enfermedad actual",
-				"PHYSICAL_EXAMINATION": "Exámen físico",
+				"PHYSICAL_EXAMINATION": "Examen físico",
 				"STUDIES_PROCEDURES": "Resumen de estudios y procedimientos realizados",
 				"PATIENT_PROGRESS": "Evolución",
 				"CLINICAL_IMPRESSION": "Impresión clínica y plan",
@@ -203,7 +203,7 @@
 			"observations": {
 				"TITLE": "Evaluación clínica",
 				"EVOLUTION_NOTE": "Evolución",
-				"PHYSICAL_EXAMINATION": "Exámen físico",
+				"PHYSICAL_EXAMINATION": "Examen físico",
 				"STUDIES_SUMMARY": "Resumen de estudios y procedimientos realizados",
 				"INDICATIONS_NOTE": "Indicaciones al alta",
 				"OTHERS": "Otras observaciones",
