--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -52,6 +52,7 @@ diagnosis.repeated=Repeated diagnosis
 health.history.condition.repeated=Repeated records
 anamnesis.exist=Internment has an anamnesis yet
 epicrisis.exist=Internment has an epicrisis yet
+internment.responsible.doctor.required=Responsable doctor mandatory
 
 clinicalobservation.effetivetime.mandatory=Measurement datetime mandatory
 clinicalobservation.effetivetime.future=Measurement datetime have to be before or equals to the current datetime
@@ -79,3 +80,5 @@ vitalsign.temperature=Temperature
 ####### Bed #######
 beds.existsInternmentEpisode=The bed has an internment episode and can't be marked as free.
 ########################
+
+attribute.required=Attribute mandatory
