[tg-664] Agrega validación backend: alta requiere epicrisis

--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -58,6 +58,7 @@ health.history.condition.repeated= Antecedentes repetidos
 anamnesis.exist=La internación ya contiene una anamnesis
 epicrisis.exist=La internación contiene un documento de epicrisis
 internment.responsible.doctor.required=Se debe asignar un doctor responsable de la internación
+internmentdischarge.invalid=Una internación sin epicrisis no puede darse de alta
 
 clinicalobservation.effetivetime.mandatory=Fecha de medición es obligatoria
 clinicalobservation.effetivetime.future=La fecha de medición debe ser anterior o igual a la fecha y hora actual
