--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -53,6 +53,7 @@ health.history.condition.repeated=Repeated records
 anamnesis.exist=Internment has an anamnesis yet
 epicrisis.exist=Internment has an epicrisis yet
 internment.responsible.doctor.required=Responsable doctor mandatory
+internmentdischarge.invalid=Can't discharge an internment without an epicrisis
 
 clinicalobservation.effetivetime.mandatory=Measurement datetime mandatory
 clinicalobservation.effetivetime.future=Measurement datetime have to be before or equals to the current datetime
