tg-626 mejora objeto nullable

--- a/front-end/webapp/src/assets/i18n/internacion/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/internacion/es-AR.json
@@ -276,6 +276,7 @@
 			"SUBTITLE": "Complete los siguientes datos",
 			"SECTION_SERVICE": "Especialidad / Servicio",
 			"SECTION_BED": "Asignación de cama",
+			"SECTION_CONTACT": "Contacto responsable",
 			"SECTION_DOCTOR": "Médico responsable",
 			"messages":{
 				"ERROR":"Error al crear una nueva internacion",
