tg-691 [P2] Fix titulos en documentos de internacion segun flavor - Hospitales y Geriatricos

--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -71,6 +71,9 @@ snomed.pt.max.value=Los tèrminos preferidos deben contener hasta 100 caracteres
 document.invalid=Documento desconocido
 document.update.invalid=La actualización del documento no es posible
 document.create.invalid=La internación ya registra un documento semejante
+document.pdf.diagnosis.title.tandil=Enfermedades
+document.pdf.diagnosis.title.minsal=Diagnósticos
+document.pdf.maindiagnosis.title.minsal=Diagnóstico principal
 
 value.mandatory=Valor obligatorio
 
