--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -66,6 +66,11 @@ snomed.pt.max.value=Preferred term must be 100 characters long
 document.invalid=Invalid document
 document.update.invalid=Document update is not possible
 document.create.invalid=Internment already registered a similar document
+
+document.pdf.diagnosis.title.tandil=illnesses
+document.pdf.diagnosis.title.minsal=Diagnostics
+document.pdf.maindiagnosis.title.minsal=Main diagnosis
+
 value.mandatory=Valor mandatory
 
 epicrisis.document.create.invalid=Anamnesis and evolution note required to create an epicrisis
