tg-629 crea componente documents summary

--- a/front-end/webapp/src/assets/i18n/internacion/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/internacion/es-AR.json
@@ -239,6 +239,14 @@
 				"SUCCESS": "El documento con la evaluación clínica de diagnósticos se guardó exitosamente"
 			}
 		},
+		"documents-summary": {
+			"search-fields": {
+				"DIAGNOSIS": "Diagnóstico",
+				"DOCTOR": "Médico",
+				"CREATEDON": "Fecha",
+				"ALL": "Todos"
+			}
+		},
 		"nota-evolucion": {
 			"TITLE": "Nota de evolución",
 			"SUBTITLE": "Completa los siguientes datos.",
