tg-741 [FE] Agrega permisos rol Enfermero

--- a/front-end/webapp/src/assets/i18n/auth/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/auth/es-AR.json
@@ -38,7 +38,8 @@
 				"ESPECIALISTA_MEDICO": "Especialista Médico",
 				"PROFESIONAL_DE_SALUD": "Profesional de la salud",
 				"ADMINISTRATIVO": "Administrativo",
-				"ENFERMERO_ADULTO_MAYOR": "Enfermero adulto mayor"
+				"ENFERMERO_ADULTO_MAYOR": "Enfermero adulto mayor",
+				"ENFERMERO": "Enfermero"
 			}
 		}
 	}
