tg-773 implementa popup para agregar alergia

--- a/front-end/webapp/src/assets/i18n/internacion/es-AR.json
+++ b/front-end/webapp/src/assets/i18n/internacion/es-AR.json
@@ -267,6 +267,9 @@
 				"ADD_NOTA_EVOLUCION": "Agregar nota de evolución",
 				"ADMINISTRATIVE_DISCHARGE": "Alta administrativa"
 			},
+			"alergias-summary": {
+				"DIALOG_TITLE": "Agregar alergia"
+			},
 			"card": {
 				"DAYS_INTERNED": "{{days}} días internado",
 				"ONE_DAY": "1 día internado",
